# Servants

./: .gitignore  CMakeLists.txt  README.md  config.json  db.cpp  main.cpp  server.cpp  service_main.cpp
Console/: CMakeLists.txt  CMakeListsVisualStudio.txt  Console.cpp  Console.h  README.md  grep  main.cpp
Console/GTests/: LoggerTest.cpp
Console/Servants/: Job.cpp  Routes.cpp  Routes.h  Scheduler.cpp  Scheduler.h  Servant.cpp  Servant.h  WebServices.cpp  WebServices.h
Console/Services/: Authentication.cpp  Authentication.h  Curl.cpp  Curl.hpp  Database.cpp  Database.h  Encoding.h  Job.cpp  Job.h  Logger.cpp  Logger.h  Scheduler.cpp  Scheduler.h  Servant.cpp  Servant.h  WebServices.cpp  WebServices.h  utilities.h
Console/Utilities/: Authentication.cpp  Authentication.h  Authenticator.cpp  Authenticator.h  Curl.cpp  Database.cpp  Database.h  Encoding.h  Logger.cpp  Logger.h  utilities.h
Console/WebServices/: WebServices.cpp  WebServices.h
Console/static/css/: styles.css
Console/static/js/: general.js
Console/static/views/: message.csp
tests/: test_main.cpp
